--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "holosophos"
-version = "0.2.0"
+version = "0.3.0"
 description = "Holosophos Project"
 requires-python = ">=3.12"
 dependencies = [
@@ -13,7 +13,6 @@ dependencies = [
     "xmltodict>=0.14.0",
     "pyyaml>=5.3.1",
     "types-pyyaml>=5.3.1",
-    "transformers==4.47.1",
     "docker>=7.1.0",
     "fire>=0.7.0",
     "tqdm>=4.66.0",
@@ -22,8 +21,9 @@ dependencies = [
     "gradio==5.29.0",
     "types-xmltodict>=0.14.0.20241009",
     "pytest>=8.4.1",
+    "pytest-asyncio>=1.0.0",
     "academia-mcp==0.0.10",
-    "mle-kit-mcp==0.0.1",
+    "mle-kit-mcp==0.0.4",
     "codearkt==0.0.14",
 ]
 
@@ -53,3 +53,7 @@ include-package-data = false
 [[tool.mypy.overrides]]
 module = "pydantic.*"
 follow_imports = "skip"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_test_loop_scope = "function"
