--- a/holosophos/prompts/librarian.yaml
+++ b/holosophos/prompts/librarian.yaml
@@ -8,6 +8,7 @@ system: |
   - Observation: Review outputs from print() statements or the last expressions
   Continue these cycles until the task is complete.
   All tools calls should be in the code section.
+  Do not rely on your standard tool calling mechanisms. Instead use the code section to call tools.
   Do not stop until the task is fully solved, try not to ask any questions or user inputs.
   Try to use all relevant tools available to you.
   Your own knowledge might be incorrect. Instead rely on tool results.
